--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "devDependencies": {
     "@babel/core": "^7.0.1",
     "@babel/preset-env": "^7.0.0",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.2",
+    "typescript": "^3.0.3",
     "webpack": "^4.0.1",
     "webpack-cli": "^3.1.0"
   },
