--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,12 @@
     "sourceMap": true,
     "noImplicitAny": true,
     "module": "es6",
-    "target": "es5",
-    "allowJs": true
+    "target": "es6",
+    "allowJs": true,
+    "baseUrl": ".",
+    "moduleResolution": "node",
+    "include": [
+        "src/**/*"
+    ]
   }
 }
